# STM32

./: .gitignore  README.md  STM.jfif
.metadata/: .log4j.xml  version.ini
10-1_SPI_F429ZIT6U/: .cproject  .project
11-1_SDIO_FATFS_F429ZIT6U/: .cproject  .mxproject  .project  11-1_SDIO_FATFS_F429ZIT6U Debug.launch  11-1_SDIO_FATFS_F429ZIT6U.ioc
11-2_MP3_PLAYER_F429ZIT6U/: .cproject  11-2_MP3_PLAYER_F429ZIT6U.ioc
11-3_SDcard_SPI_FATFS_F429ZI/: .mxproject  .project  11-3_SDcard_SPI_FATFS_F429ZI Debug.launch
12-1_ETH_LWIP_UDP_echo_F429ZIT6U/: .project  12-1_ETH_LWIP_UDP_echo_F429ZIT6U.ioc
13-1_CAN_F429ZIT6U/: .cproject  .mxproject  .project
2-1_UART/: .cproject  .mxproject  2-1_UART.ioc
2-1_UART_F429ZIT6U/: .cproject  .mxproject  .project  2-1_UART_F429ZIT6U.ioc
2-2_UART_printf_F429ZIT6U/: .cproject  .project
2-3_UART_interrupt_F429ZIT6U/: 2-3_UART_interrupt_F429ZIT6U Debug.launch
210727_01/: .cproject  .mxproject  .project  210727_01 Debug.launch  210727_01.ioc  210727_01.txt
3-1_CharacterLCD_F429ZIT6U/: .mxproject  3-1_CharacterLCD_F429ZIT6U Debug.launch  3-1_CharacterLCD_F429ZIT6U.ioc
3-1_UART_CharacterLCD_F429ZIT6U/: .cproject
4-1_Timer_Interrupt_F429ZIT6U/: .cproject  .mxproject  4-1_Timer_Interrupt_F429ZIT6U Debug.launch
5-1_External_Interrupt_F429ZIT6U/: .mxproject  5-1_External_Interrupt_F429ZIT6U Debug.launch
6-1_PWM_F429ZIT6U/: .cproject  6-1_PWM_F429ZIT6U Debug.launch  6-1_PWM_F429ZIT6U.ioc
6-2_PWM_SG90_BUZZER_DCmotor_F429ZIT6U/: .cproject  .project  6-2_PWM_SG90_BUZZER_DCmotor_F429ZIT6U.ioc
6-3_ARR_Prescaler_F429ZIT6U/: .cproject  .mxproject  .project
7-1_ADC_DMA_F429ZIT6U/: .cproject  .mxproject  7-1_ADC_DMA_F429ZIT6U Debug.launch
7-2_ADC_Graph_F429ZIT6U/: .cproject  .mxproject  7-2_ADC_Graph_F429ZIT6U Debug.launch
8-1_DAC_F429ZIT6U/: .mxproject  8-1_DAC_F429ZIT6U Debug.launch  8-1_DAC_F429ZIT6U.ioc
Board/Weact/VScode/stm32g431_fw/: CMakeLists.txt
Board/Weact/VScode/stm32g431_fw/src/: main.cpp
Board/Weact/VScode/stm32g431_fw/src/bsp/device/: stm32g4xx_hal_conf.h  stm32g4xx_it.c  stm32g4xx_it.h
Board/Weact/VScode/stm32g431_fw/src/bsp/ldscript/: STM32G431CBUX_FLASH.ld
Board/Weact/VScode/stm32g431_fw/tools/: arm-none-eabi-gcc.cmake
CharacterLCD라이브러리/: i2c-lcd.c
DFU_TEST/: .mxproject  .project  DFU_TEST.ioc
EXERCISE/: STM32F722RET6_PIN_Config.txt
F103C8T6_TEST/: .mxproject
F429ZI_문서/: F429ZI_PIN위치.xlsx  PIN위치.xlsx
L432KC_TEST/: .mxproject
MDK-ARM_F429ZI_LED_Test/: MDK-ARM_F429ZI_LED_Test.ioc
MDK_ARM_F429ZIT6U/: .mxproject  MDK_ARM_F429ZIT6U.ioc
SPI_CAN_MCP2515_TEST/: .project
STM32F103DFUBootloader/: .cproject  .cproject_org  .mxproject  .project  .project_org  STM32F103DFUBootloader Debug.launch  STM32F103DFUBootloader.elf.launch  STM32F103DFUBootloader.ioc  STM32F103DFUBootloader.txt
STM32H747/: .mxproject  .project  1.Blink.ioc
VS1003/: VS1003.h
cubeMX_TEST/: .mxproject  cubeMX_TEST.ioc  cubeMX_TEST.txt
(+3166 files in other folders)
